# projeto_n6

./: README.md  pyproject.toml
data/metrics/olist/run_date=2026-01-07/: metrics.parquet
data/rejects/olist/run_date=2026-01-07/: orders_rejects.parquet
docs/: data_contract.md  gold_blueprint.md  silver_design.md
src/project_n6/: init_run.py  settings.py
src/projeto_n6/: io_utils.py  logging_utils.py  paths.py  pipeline.py  run_context.py  test_orders_manual.py
src/projeto_n6/silver/: orders.py  test_orders_manual.py
tests/: test_pipeline.py  teste_orders_silver.py
tests/silver/: conftest.py  test_orders_pk.py  test_orders_sanity.py  test_orders_schema.py
