[tool.poetry]
name = "projeto-n6"
version = "0.1.0"
description = "Projeto de dados nível 6"
authors = ["Daniel <danme@email.com>"]

packages = [
    { include = "projeto_n6", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
pyarrow = "^22.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
